fixed layout bugs

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -112,7 +112,7 @@ header {
   margin-top: 0.5rem;
 }
 /* Responsive layout*/
-@media (max-width: 70rem) {
+@media (max-width: 700px) {
   .wrapper {
     display: flex;
     flex-direction: column;
@@ -133,7 +133,7 @@ header {
   }
 }
 
-@media screen and (min-width: 100rem) {
+@media screen and (min-width: 1000px) {
   .description {
     width: 50%;
   }
